# reprise

./: .env.example  .gitignore  LICENSE  Pipfile  README.md  alembic.ini  dispatch_example.plist  mailgun_example.plist  pyproject.toml  settings.py
.cursor/rules/: clean-tests.mdc  debugging.mdc  tdd.mdc  testing.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3fd9ec1e9280_initial_migration.py  44f2a7ba7442_reprisal_schedule.py  572c84b8233b_citation_table.py  5e641ae4295c_cloze_deletions.py  ee7b59fbb322_reprisal_table.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CitationsTab.js  MotifsTab.js  ReprisalsTab.js  ReprisedMotifsTab.js  TabsContainer.js
frontend/src/hooks/: useCitations.js  useMotifData.js  useMotifs.js
frontend/src/services/: apiService.js  motifService.js  reprisalService.js
reprise/: agent.py  api.py  config.py  db.py  dispatcher.py  factories.py  formatters.py  mailgun.py  motif.py  openai_client.py  repository.py  schemas.py  service.py  settings.py  vault.py
reprise/llm/: agent.py
reprise/llm/chains/: __init__.py  information_extraction_chain.py
scripts/: dispatch.py  input.py  motif.py
tests/: conftest.py  factories.py  utils.py
tests/integration/: test_api.py  test_vault.py
tests/unit/: test_agent.py  test_db.py  test_dispatcher.py  test_formatters.py  test_motif.py  test_openai_client.py  test_repository.py  test_service.py  test_vault.py
ui/: .babelrc  package-lock.json  package.json
ui/src/: .env.example  App.js
(+14 files in other folders)
